# fuchsia

garnet/lib/rust/bt-avctp/: BUILD.gn
garnet/lib/rust/bt-avctp/src/: avcpeer.rs  lib.rs  peer.rs  tests.rs  types.rs
scripts/sdk/common/: frontend.py
scripts/sdk/merger/: merge.py
src/connectivity/bluetooth/hci/emulator/: device.cc
src/connectivity/bluetooth/profiles/bt-avrcp/: BUILD.gn
src/connectivity/bluetooth/profiles/bt-avrcp/src/: main.rs  peer.rs  types.rs
zircon/kernel/arch/arm64/: BUILD.gn  dap.cc  mp.cc
zircon/kernel/arch/arm64/include/arch/arm64/: mp.h
zircon/kernel/arch/x86/: BUILD.gn  mp.cc
zircon/kernel/lib/acpi_lite/: BUILD.gn
zircon/kernel/lib/acpi_tables/: BUILD.gn
zircon/kernel/platform/pc/: BUILD.gn  hpet.cpp  platform.cpp
zircon/kernel/syscalls/: BUILD.gn
zircon/kernel/vm/: BUILD.gn  vm.cc
zircon/system/dev/board/x86/: BUILD.gn  pci.cc  pciroot.cc
zircon/system/dev/board/x86/include/: pci.h
zircon/system/dev/bus/pci/: device.cc
zircon/system/dev/lib/fake-bti/include/lib/fake-bti/: bti.h
zircon/system/dev/lib/fake-object/include/lib/fake-object/: object.h
zircon/system/dev/lib/fake-resource/: fake-resource.cc
zircon/system/dev/lib/fake-resource/test/: fake-resource-test.cc
zircon/system/dev/lib/pci/: BUILD.gn  root_host.cc
zircon/system/dev/lib/pci/include/lib/pci/: root.h  root_host.h
zircon/system/dev/lib/pci/test/: root_host-test.cc
zircon/system/utest/: BUILD.gn
