# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")
import("//build/rust/rustc_binary.gni")
import("//build/test/test_package.gni")
import("//build/testing/environments.gni")

rustc_binary("bin") {
  name = "bt_avrcp"
  edition = "2018"
  with_unit_tests = true

  deps = [
    "//garnet/lib/rust/bt-avctp",
    "//garnet/lib/rust/fuchsia-bluetooth",
    "//sdk/fidl/fuchsia.bluetooth:fuchsia.bluetooth-rustc",
    "//sdk/fidl/fuchsia.bluetooth.avrcp:fuchsia.bluetooth.avrcp-rustc",
    "//sdk/fidl/fuchsia.bluetooth.bredr:fuchsia.bluetooth.bredr-rustc",
    "//garnet/public/lib/fidl/rust/fidl",
    "//garnet/public/rust/fdio",
    "//garnet/public/rust/fuchsia-app",
    "//garnet/public/rust/fuchsia-async",
    "//garnet/public/rust/fuchsia-syslog",
    "//garnet/public/rust/fuchsia-zircon",
    "//third_party/rust_crates:bitfield",
    "//third_party/rust_crates:failure",
    "//third_party/rust_crates:futures-preview",
    "//third_party/rust_crates:log",
    "//third_party/rust_crates:parking_lot",
    "//third_party/rust_crates:slab",
  ]
}

package("bt-avrcp") {
  deps = [
    ":bin",
  ]

  binary = "rust_crates/bt_avrcp"

  meta = [
    {
      path = rebase_path("meta/bt-avrcp.cmx")
      dest = "bt-avrcp.cmx"
    },
  ]
}

test_package("bt-avrcp-tests") {
  deps = [
    ":bin",
  ]

  tests = [
    {
      name = "bt_avrcp_bin_test"
      dest = "bt-avrcp-unittests"
    },
  ]
}
