# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

zx_library("pci") {
  sdk = "source"
  sdk_headers = [ "include/lib/pci/root.h", "include/lib/pci/root_host.h" ]
  sources = ["root_host.cc"]
  public_deps = [
        "$zx/system/banjo/ddk.protocol.pciroot",
        "$zx/system/ulib/region-alloc",
  ]
}

zx_test("pci-roothost") {
  sources = [
    "test/root_host-test.cc"
  ]
  deps = [
    "$zx/system/dev/lib/fake_ddk",
    "$zx/system/dev/lib/fake-resource",
    "$zx/system/ulib/zxtest",
    "$zx/system/ulib/fdio",
    ":pci"
  ]
}
